feat: 구글 에드센스 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 {%- endif -%}
 
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6033629142446390" crossorigin="anonymous"></script>
   <main class="container">
     <section class="about">
       <div class="about-header {{condensed_class}}">
@@ -166,8 +167,10 @@
       {{ content }}
     </section>
     <footer class="{{condensed_class}}">
+      
       {{ footer }}
     </footer>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6033629142446390" crossorigin="anonymous"></script>
   </main>
   {% if site.plainwhite.dark_mode %}
   <script type="text/javascript" src="{{ "/assets/js/darkmode.js" | relative_url }}"></script>
@@ -187,6 +190,7 @@
   <script src="{{ "/assets/js/simple-jekyll-search.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/js/search.js" | relative_url }}"></script>
   {% endif %}
+  
 </body>
 
 </html>
