feat: mermaid 적용 테스트

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.plainwhite.html_lang }}">
 
 <head>
+  {% include mermaid.html %}
   {%- include head.html -%}
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
