--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,3 +8,6 @@
 {% if site.plainwhite.dark_mode %}
 <script type="text/javascript" src="{{ "/assets/js/darkmode.js" | relative_url }}"></script>
 {% endif %}
+{% if page.mermaid %}
+  {% include mermaid.html %}
+{% endif %}
